      if x2gostartagent send LIMIT error. Current commit fixes this issue. 
    - SshMasterConnection should use current user name if no user name is
      specified in session settings
    - GSSApi(Kerberos 5) authentication for sshproxy and sshbroker 
    - fixed GSSApi(Kerberos 5) authentication for sshproxy and sshbroker
      on windows

  [ Heinrich Schuchardt ]
  * New upstream version (4.0.1.2):
    - Handle SSH host key changes more elegantly and allow user interaction
      if such a host key change occurs. (Fixes: #241).

  [ Michael DePaulo ]
  * New upstream version (4.0.1.2):
    - win32: Add uninstall information to Add/Remove Programs. (Fixes: #230).

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 11 Sep 2013 12:17:43 +0200

x2goclient (4.0.1.1-0~x2go1) unstable; urgency=low

  [ Nicolai Hansen ]
  * New upstream version (4.0.1.1):
    - Update Danish translation file.

  [ Terje Andersen ]
  * New upstream version (4.0.1.1):
    - Update Norwegian Bokmaal translation file.

  [ Oleksandr Shneyder ]
  * New upstream version (4.0.1.1):
    - Use "127.0.0.1" instead of localhost to avoid wrong IPv6 hostname
      resolution. (Fixes: #151).
    - Wait for x2gocmdexitmessage to return before closing in hidden mode.
    - Support for published applications in X2Go Plugin 
    - Support for "shadow" mode in X2Go Plugin 

  [ Mike Gabriel ]
  * New upstream version (4.0.1.1):
    - If a priv SSH key has been specified, skip the autologin procedure.
      Let's consider a given SSH private key that fails to log the user
      in as an overall login failure. (Fixes: #141).
    - Avoid multiple selectUserSession requests when in broker
      mode.
    - Properly set the remote server address received via selectUserSession
      method when in broker mode. (Fixes: #226).
    - Fix segmentation fault that started occurring since the custom trayIcon
      patch was applied. Segfault only occurred if the tray icon was not used.