@@ -71,6 +71,8 @@ x2goclient (4.0.1.2-0x2go2) UNRELEASED; urgency=low
     - GSSApi(Kerberos 5) authentication for sshproxy and sshbroker 
     - fixed GSSApi(Kerberos 5) authentication for sshproxy and sshbroker
       on windows
+    - changed keyboard settings. Supported modes: auto, none and config with
+      model/layout(variant)
 
   [ Heinrich Schuchardt ]
   * New upstream version (4.0.1.2):
